// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with no expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       for a total of 
      <span>
        $1.99
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button button--blue"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render correctly with several expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        10
      </span>
       
      expenses
       for a total of 
      <span>
        $1,222.99
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button button--blue"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
